--- a/pom.xml
+++ b/pom.xml
@@ -56,10 +56,9 @@
 			<scope>annotationProcessor</scope>
 		</dependency>
 
-		<dependency>
-			<groupId>jakarta.validation</groupId>
-			<artifactId>jakarta.validation-api</artifactId>
-			<version>3.0.2</version>
+			<dependency>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-starter-validation</artifactId>
 			</dependency>
 			<dependency>
 			<groupId>org.hibernate</groupId>
