--- a/pom.xml
+++ b/pom.xml
@@ -95,6 +95,39 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+
+			<plugin>
+				<groupId>org.jacoco</groupId>
+				<artifactId>jacoco-maven-plugin</artifactId>
+				<version>0.8.7</version>
+				<configuration>
+					<excludes>
+						<exclude>com/thomaskavi/dscommerce/DscommerceApplication.class</exclude>
+						<exclude>com/thomaskavi/dscommerce/config/**</exclude>
+						<exclude>com/thomaskavi/dscommerce/entities/**</exclude>
+						<exclude>com/thomaskavi/dscommerce/dto/**</exclude>
+						<exclude>com/thomaskavi/dscommerce/controllers/handlers/**</exclude>
+						<exclude>com/thomaskavi/dscommerce/services/exceptions/**</exclude>
+					</excludes>
+				</configuration>
+				<executions>
+					<execution>
+						<goals>
+							<goal>prepare-agent</goal>
+						</goals>
+					</execution>
+					<execution>
+						<id>jacoco-report</id>
+						<phase>prepare-package</phase>
+						<goals>
+							<goal>report</goal>
+						</goals>
+						<configuration>
+							<outputDirectory>target/jacoco-report</outputDirectory>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
 		</plugins>
 	</build>
 
